--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 #demo { 
-    float: left;        
+    float: left;
+      display: inline;
 }
 body {
   font-family: 'Lato', sans-serif;
 }
 .container {
-  width: 100%;
+  width: 30%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
+  display: inline-block;
   align-items: center;
 }
 h1 {
@@ -24,8 +26,8 @@ h1 {
   text-align: left;
   box-shadow: 0 1px 2px rgba(0,0,0,0.1);
   padding: 30px;
-  width: 200px;
-  height: 210px;
+  width: 300px;
+  height: 810px;
   margin: 10px;
 }
 .control {
